--- a/Home-NYSL-app.html
+++ b/Home-NYSL-app.html
@@ -27,20 +27,10 @@
             <a type="button" class="btn" id="locations" href="Locations-NYSL.html">Game Locations</a>
             <a type="button" class="btn" id="about" href="about-NYSL.html">About NYSL</a>
             <a type="button" class="btn" id="forum">Forum</a>
-            <!-- <a type="button" class="btn" id="events" href="events-NYSL-app.html">Events</a> -->
+            <a type="button" class="btn" id="events" href="events-NYSL-app.html">Events</a>
         </div>
 
-        <div class="events">
-            <h2 class="title">Upcoming Events</h2>
-            <h4>August 4</h4>
-            <p>NYSL Fundraiser</p>
 
-            <h4>August 16</h4>
-            <p>Season Kick-off: Meet the Teams</p>
-
-            <h4>September 1</h4>
-            <p>First Game of the Season (Check Game Schedule for details)</p>
-        </div>
     </div>
 </body>
 
