--- a/events-NYSL-app.html
+++ b/events-NYSL-app.html
@@ -22,6 +22,18 @@
 
         <h1 class="title">Events</h1>
 
+        <div class="events">
+            <h2 class="title">Upcoming Events</h2>
+            <h4>August 4</h4>
+            <p>NYSL Fundraiser</p>
+
+            <h4>August 16</h4>
+            <p>Season Kick-off: Meet the Teams</p>
+
+            <h4>September 1</h4>
+            <p>First Game of the Season (Check Game Schedule for details)</p>
+        </div>
+
     </div>
 </body>
 
