--- a/about-NYSL.html
+++ b/about-NYSL.html
@@ -40,8 +40,9 @@
             </p>
         </div>
 
-        <a href="home-NYSL-app.html"><img src="soccerball.png" alt="home" class="home-btn" id="home.btn"></a>
-
+        <div class="home-btn">
+            <a type="button" id="home-btn" href="Home-NYSL-app.html" class="btn">Home</a>
+        </div>
     </div>
 </body>
 
