--- a/Game-info-NYSL.html
+++ b/Game-info-NYSL.html
@@ -20,23 +20,36 @@
             <img src="green-soccer-field.jpg" alt="soccer field" id="background">
         </div>
 
-        <h1 class="title">Game Schedule</h1>
+        <h1 class="title">Saturday Game</h1>
 
-        <h3 class="gameDay">Saturday</h3>
         <h6 class="date">DD/MM/YEAR</h6>
         <h4 class="time">9:30AM</h4>
+        <div class="field">
+            <h5>Location: {{ gameDayAM.field }}</h5>
+        </div>
 
         <div id="AM-game">
-            <div class="home-team"><img class="logo" src="Logo1.jpeg" alt="logo"></div>
+            <div class="home-team">
+                <h1>{{ gameDayAM.home_team }}</h1>
+            </div>
             <h3 class="vs">VS.</h3>
-            <div class="away-team"><img class="logo" src="Logo4.jpeg" alt="logo"></div>
+            <div class="away-team">
+                <h1>{{ gameDayAM.away_team }}</h1>
+            </div>
         </div>
 
         <h4 class="time" id="late-game">1:00PM</h4>
+        <div class="field">
+            <h5>Location: {{ gameDayPM.field }}</h5>
+        </div>
         <div id="PM-game">
-            <div class="home-team"><img src="Logo3.jpeg" alt="logo" class="logo"></div>
+            <div class="home-team">
+                <h1>{{ gameDayPM.home_team }}</h1>
+            </div>
             <h3 class="vs">VS.</h3>
-            <div class="away-team"><img src="Logo2.jpeg" alt="logo" class="logo"></div>
+            <div class="away-team">
+                <h1>{{ gameDayPM.away_team }}</h1>
+            </div>
         </div>
 
         <a type="button" id="upcoming-game" href="Upcoming-NYSL-app.html" class="btn">Upcoming Games</a>
