--- a/Locations-NYSL.html
+++ b/Locations-NYSL.html
@@ -20,7 +20,21 @@
             <img src="green-soccer-field.jpg" alt="soccer field" id="background">
         </div>
 
-        <h1>Home</h1>
+        <h1 class='title'>Location</h1>
+
+        <div class="btn-container">
+            <a href="location1.html" class="btn" type="button">AJ Katzenmaier</a>
+            <a href="location2.html" class="btn" type="button">Greenbay</a>
+            <a href="location3.html" class="btn" type="button">Howard A Yeager</a>
+            <a href="location4.html" class="btn" type="button">Marjorie P Hart</a>
+            <a href="location5.html" class="btn" type="button">North</a>
+            <a href="location6.html" class="btn" type="button">South</a>
+        </div>
+
+        <div id="back-and-home-btn">
+            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
+
+        </div>
 
     </div>
 </body>
