--- a/location6.html
+++ b/location6.html
@@ -20,42 +20,26 @@
             <img src="green-soccer-field.jpg" alt="soccer field" id="background">
         </div>
 
-        <h1 class="title">Saturday Game</h1>
+        <h1 class='title'>Location</h1>
 
-        <h6 class="date">DD/MM/YEAR</h6>
-        <h4 class="time">9:30AM</h4>
-        <div class="field">
-            <h5>Location: {{ gameDayAM.field }}</h5>
+        <div class='field'>
+            <h3>South</h3>
+            <h5>8255 S Houston Ave, Chicago</h5>
         </div>
 
-        <div id="AM-game">
-            <div class="home-team">
-                <h1>{{ gameDayAM.home_team }}</h1>
-            </div>
-            <h3 class="vs">VS.</h3>
-            <div class="away-team">
-                <h1>{{ gameDayAM.away_team }}</h1>
-            </div>
-        </div>
-
-        <h4 class="time" id="late-game">1:00PM</h4>
-        <div class="field">
-            <h5>Location: {{ gameDayPM.field }}</h5>
-        </div>
-        <div id="PM-game">
-            <div class="home-team">
-                <h1>{{ gameDayPM.home_team }}</h1>
-            </div>
-            <h3 class="vs">VS.</h3>
-            <div class="away-team">
-                <h1>{{ gameDayPM.away_team }}</h1>
+        <div class="mapouter">
+            <div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=8255%20S%20Houston%20Ave%2C%20Chicago%2C%20IL%2060617&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                    href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a>
             </div>
         </div>
 
         <div id="back-and-home-btn">
             <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
-            <a type="button" id="upcoming-game" href="Upcoming-NYSL-app.html" class="btn">Upcoming Games</a>
+            <a type="button" id="game-info" href="Locations-NYSL.html" class="btn">Back</a>
         </div>
+
     </div>
 </body>
 
