--- a/Game-info-NYSL.html
+++ b/Game-info-NYSL.html
@@ -22,7 +22,7 @@
 
         <h1 class="title">Saturday Game</h1>
 
-        <h6 class="date">DD/MM/YEAR</h6>
+        <h5 class="date">{{ gameDayAM.date }}</h5>
         <h4 class="time">9:30AM</h4>
         <div class="field">
             <h5>Location: {{ gameDayAM.field }}</h5>
