game schedule fixed, started with result page

--- a/Home-NYSL-app.html
+++ b/Home-NYSL-app.html
@@ -24,6 +24,7 @@
 
         <div class="btn-container">
             <a type="button" class="btn" id="game-info" href="game-info-NYSL.html">Game Schedule</a>
+            <a type="button" class="btn" id="game-info" href="scoreboard-NYSL-app.html">Scoreboard</a>
             <a type="button" class="btn" id="locations" href="Locations-NYSL.html">Game Locations</a>
             <a type="button" class="btn" id="about" href="about-NYSL.html">About NYSL</a>
             <a type="button" class="btn" id="forum">Forum</a>
