--- a/result-NYSL-app.html
+++ b/result-NYSL-app.html
@@ -20,13 +20,7 @@
             <img src="green-soccer-field.jpg" alt="soccer field" id="background">
         </div>
 
-        <h1 class="title">Saturday Game</h1>
-
-        <h5 class="date">{{ schedule[n].date }}</h5>
-        <h4 class="time">9:30AM</h4>
-        <div class="field">
-            <h5>Location: {{ schedule[n].field }}</h5>
-        </div>
+        <h1 class="title">Result</h1>
 
         <div id="AM-game">
             <div class="home-team">
@@ -37,30 +31,30 @@
                 <h1>{{ schedule[n].away_team }}</h1>
             </div>
         </div>
+        <form class="end-result">
+            <input type="number" class="input">
+            <input type="number" class="input">
+        </form>
 
-        <h4 class="time" id="late-game">{{ schedulePM[j].time }}</h4>
-        <div class="field">
-            <h5>{{ schedulePM[j].field }}</h5>
-        </div>
-        <div id="PM-game">
+        <div id="AM-game">
             <div class="home-team">
                 <h1>{{ schedulePM[j].home_team }}</h1>
             </div>
-            <h3 class="vs">{{ schedulePM[j].vs }}</h3>
+            <h3 class="vs">VS.</h3>
             <div class="away-team">
                 <h1>{{ schedulePM[j].away_team }}</h1>
             </div>
         </div>
+        <form class="end-result">
+            <input type="number" class="input">
+            <input type="number" class="input">
+        </form>
 
         <div id="back-and-home-btn">
             <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
-            <a type="button" id="upcoming-game" href="Upcoming-NYSL-app.html" class="btn">Upcoming Games</a>
+            <a type="button" id="game-info" href="Game-info-NYSL.html" class="btn">Game info</a>
         </div>
 
-        <div class="game-over">
-            <a href="result-NYSL-app.html" @click="n++, j++" :disabled="n >= gameDayAM.length - 1" id="game-over">Game
-                Finished</a>
-        </div>
     </div>
 </body>
 
