testing scoreboard with dummie data

--- a/about-NYSL.html
+++ b/about-NYSL.html
@@ -40,7 +40,7 @@
             </p>
         </div>
 
-        <div class="home-btn">
+        <div id="back-and-home-btn">
             <a type="button" id="home-btn" href="Home-NYSL-app.html" class="btn">Home</a>
         </div>
     </div>
