--- a/events-NYSL-app.html
+++ b/events-NYSL-app.html
@@ -34,6 +34,10 @@
             <p>First Game of the Season (Check Game Schedule for details)</p>
         </div>
 
+        <div id="back-and-home-btn">
+            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
+        </div>
+
     </div>
 </body>
 
