--- a/scoreboard-NYSL-app.html
+++ b/scoreboard-NYSL-app.html
@@ -34,7 +34,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="result in result">
+                <tr v-for="result in sortResult">
                     <td><b>{{ result.team }}</b></td>
                     <td><b>{{ result.games_played }}</b></td>
                     <td><b>{{ result.win }}</b></td>
