--- a/Home-NYSL-app.html
+++ b/Home-NYSL-app.html
@@ -27,7 +27,8 @@
             <a type="button" class="btn" id="game-info" href="scoreboard-NYSL-app.html">Scoreboard</a>
             <a type="button" class="btn" id="locations" href="Locations-NYSL.html">Game Locations</a>
             <a type="button" class="btn" id="about" href="about-NYSL.html">About NYSL</a>
-            <a type="button" class="btn" id="forum">Forum</a>
+            <!-- will do the messageboard later -->
+            <a type="button" class="btn" id="messageboard" disabled>Messageboard</a>
             <a type="button" class="btn" id="events" href="events-NYSL-app.html">Events</a>
         </div>
 
