--- a/result-NYSL-app.html
+++ b/result-NYSL-app.html
@@ -32,8 +32,8 @@
             </div>
         </div>
         <form class="end-result">
-            <input type="number" class="input">
-            <input type="number" class="input">
+            <input type="number" class="input" id="home">
+            <input type="number" class="input" id="away">
         </form>
 
         <div id="AM-game">
@@ -46,12 +46,17 @@
             </div>
         </div>
         <form class="end-result">
-            <input type="number" class="input">
-            <input type="number" class="input">
+            <input type="number" class="input" id="home">
+            <input type="number" class="input" id="away">
         </form>
+
+        <div class="submit">
+            <button id="submit">Submit</button>
+        </div>
 
         <div id="back-and-home-btn">
             <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
+            <a type="button" id="home" href="scoreboard-NYSL-app.html" class="btn">Scoreboard</a>
             <a type="button" id="game-info" href="Game-info-NYSL.html" class="btn">Game info</a>
         </div>
 
