--- a/scoreboard-NYSL-app.html
+++ b/scoreboard-NYSL-app.html
@@ -16,8 +16,13 @@
 
     <div id="app">
 
-        <div class="background-img">
-            <img src="green-soccer-field.jpg" alt="soccer field" id="background">
+        <div class="background-img-portrait">
+            <img src="green-soccer-field.jpg" alt="soccer field" id="background-portrait">
+        </div>
+
+        <div class="background-img-landscape">
+            <img src="green-soccer-field-landscape.jpg" alt="soccer field" id="backgound-landscape" height="400px"
+                width="auto">
         </div>
 
         <h1 class="title">Scoreboard</h1>
