made changes for CSS portrait and landscape mode

--- a/Home-NYSL-app.html
+++ b/Home-NYSL-app.html
@@ -17,18 +17,26 @@
     <div id="app">
 
         <div class="background-img">
-            <img src="green-soccer-field.jpg" alt="soccer field" id="background">
+            <img src="soccer-field(1).png" alt="soccer field" id="background">
+        </div>
+
+        <div class="background-img-landscape">
+            <img src="soccer-field.png" alt="soccer field" id="background-landscape">
         </div>
 
         <h1 class="title">Home</h1>
 
         <div class="btn-container">
             <a type="button" class="btn" id="game-info" href="game-info-NYSL.html">Game Schedule</a>
+            <!-- temporary result page -->
+            <a type="button" class="btn" id="tempResult" href="tempResult.html">Temp Result</a>
+
             <a type="button" class="btn" id="game-info" href="scoreboard-NYSL-app.html">Scoreboard</a>
             <a type="button" class="btn" id="locations" href="Locations-NYSL.html">Game Locations</a>
             <a type="button" class="btn" id="about" href="about-NYSL.html">About NYSL</a>
             <!-- will do the messageboard later -->
             <a type="button" class="btn" id="messageboard" disabled>Messageboard</a>
+
             <a type="button" class="btn" id="events" href="events-NYSL-app.html">Events</a>
         </div>
 
