--- a/scoreboard-NYSL-app.html
+++ b/scoreboard-NYSL-app.html
@@ -16,13 +16,12 @@
 
     <div id="app">
 
-        <div class="background-img-portrait">
-            <img src="green-soccer-field.jpg" alt="soccer field" id="background-portrait">
+        <div class="background-img">
+            <img src="soccer-field(1).png" alt="soccer field" id="background">
         </div>
 
         <div class="background-img-landscape">
-            <img src="green-soccer-field-landscape.jpg" alt="soccer field" id="backgound-landscape" height="400px"
-                width="auto">
+            <img src="soccer-field.png" alt="soccer field" id="background-landscape">
         </div>
 
         <h1 class="title">Scoreboard</h1>
