--- a/location6.html
+++ b/location6.html
@@ -17,7 +17,11 @@
     <div id="app">
 
         <div class="background-img">
-            <img src="green-soccer-field.jpg" alt="soccer field" id="background">
+            <img src="soccer-field(1).png" alt="soccer field" id="background">
+        </div>
+
+        <div class="background-img-landscape">
+            <img src="soccer-field.png" alt="soccer field" id="background-landscape">
         </div>
 
         <h1 class='title'>Location</h1>
