--- a/public/Upcoming-NYSL-app.html
+++ b/public/Upcoming-NYSL-app.html
@@ -46,7 +46,7 @@
         </table>
 
         <div id="back-and-home-btn">
-            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
+            <a type="button" id="home" href="index.html" class="btn">Home</a>
             <a type="button" id="game-info" href="Game-info-NYSL.html" class="btn">Back</a>
         </div>
 
