--- a/public/events-NYSL-app.html
+++ b/public/events-NYSL-app.html
@@ -24,24 +24,22 @@
             <img src="soccer-field.png" alt="soccer field" id="background-landscape">
         </div>
 
-        <h1 class='title'>Location</h1>
+        <h1 class="title">Events</h1>
 
-        <div class='field'>
-            <h3>North</h3>
-            <h5>1717 17th St, North Chicago</h5>
-        </div>
+        <div class="events">
+            <h2 class="title">Upcoming Events</h2>
+            <h4>August 4</h4>
+            <p>NYSL Fundraiser</p>
 
-        <div class="mapouter">
-            <div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas"
-                    src="https://maps.google.com/maps?q=1717%2017th%20St%2C%20North%20Chicago&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                    href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a>
-            </div>
+            <h4>August 16</h4>
+            <p>Season Kick-off: Meet the Teams</p>
+
+            <h4>September 1</h4>
+            <p>First Game of the Season (Check Game Schedule for details)</p>
         </div>
 
         <div id="back-and-home-btn">
-            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
-            <a type="button" id="game-info" href="Locations-NYSL.html" class="btn">Back</a>
+            <a type="button" id="home" href="index.html" class="btn">Home</a>
         </div>
 
     </div>
