--- a/public/location1.html
+++ b/public/location1.html
@@ -43,7 +43,7 @@
 
 
         <div id="back-and-home-btn">
-            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
+            <a type="button" id="home" href="index.html" class="btn">Home</a>
             <a type="button" id="game-info" href="Locations-NYSL.html" class="btn">Back</a>
         </div>
 
