--- a/public/location4.html
+++ b/public/location4.html
@@ -24,44 +24,24 @@
             <img src="soccer-field.png" alt="soccer field" id="background-landscape">
         </div>
 
-        <h1 class="title">Result</h1>
+        <h1 class='title'>Location</h1>
 
-        <div id="AM-game">
-            <div class="home-team">
-                <h1>{{ schedule[n].home_team }}</h1>
-            </div>
-            <h3 class="vs">VS.</h3>
-            <div class="away-team">
-                <h1>{{ schedule[n].away_team }}</h1>
-            </div>
+        <div class='field'>
+            <h3>Marjorie P Hart</h3>
+            <h5>N Orchard St, Chicago</h5>
         </div>
-        <form class="end-result">
-            <input type="number" class="input" id="home">
-            <input type="number" class="input" id="away">
-        </form>
 
-        <div id="AM-game">
-            <div class="home-team">
-                <h1>{{ schedulePM[j].home_team }}</h1>
+        <div class="mapouter">
+            <div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=Marjorie%20P%20Hart%20&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                    href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a>
             </div>
-            <h3 class="vs">VS.</h3>
-            <div class="away-team">
-                <h1>{{ schedulePM[j].away_team }}</h1>
-            </div>
-        </div>
-        <form class="end-result">
-            <input type="number" class="input" id="home">
-            <input type="number" class="input" id="away">
-        </form>
-
-        <div class="submit">
-            <button id="submit">Submit</button>
         </div>
 
         <div id="back-and-home-btn">
-            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
-            <a type="button" id="home" href="scoreboard-NYSL-app.html" class="btn">Scoreboard</a>
-            <a type="button" id="game-info" href="Game-info-NYSL.html" class="btn">Game info</a>
+            <a type="button" id="home" href="index.html" class="btn">Home</a>
+            <a type="button" id="game-info" href="Locations-NYSL.html" class="btn">Back</a>
         </div>
 
     </div>
