--- a/public/location6.html
+++ b/public/location6.html
@@ -27,20 +27,20 @@
         <h1 class='title'>Location</h1>
 
         <div class='field'>
-            <h3>Greenbay Elementary</h3>
-            <h5>2100 Green Bay Rd, North Chicago</h5>
+            <h3>South</h3>
+            <h5>8255 S Houston Ave, Chicago</h5>
         </div>
 
         <div class="mapouter">
             <div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas"
-                    src="https://maps.google.com/maps?q=greenbay%20elementary&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                    src="https://maps.google.com/maps?q=8255%20S%20Houston%20Ave%2C%20Chicago%2C%20IL%2060617&t=&z=13&ie=UTF8&iwloc=&output=embed"
                     frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
                     href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a>
             </div>
         </div>
 
         <div id="back-and-home-btn">
-            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
+            <a type="button" id="home" href="index.html" class="btn">Home</a>
             <a type="button" id="game-info" href="Locations-NYSL.html" class="btn">Back</a>
         </div>
 
