--- a/public/scoreboard-NYSL-app.html
+++ b/public/scoreboard-NYSL-app.html
@@ -24,24 +24,33 @@
             <img src="soccer-field.png" alt="soccer field" id="background-landscape">
         </div>
 
-        <h1 class='title'>Location</h1>
+        <h1 class="title">Scoreboard</h1>
 
-        <div class='field'>
-            <h3>South</h3>
-            <h5>8255 S Houston Ave, Chicago</h5>
-        </div>
-
-        <div class="mapouter">
-            <div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas"
-                    src="https://maps.google.com/maps?q=8255%20S%20Houston%20Ave%2C%20Chicago%2C%20IL%2060617&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                    href="https://www.embedgooglemap.net/blog/elementor-pro-discount-code-review/">elementor review</a>
-            </div>
-        </div>
+        <table id="table" class="table">
+            <thead>
+                <tr>
+                    <th>Team</th>
+                    <th>Games Played</th>
+                    <th>Wins</th>
+                    <th>Ties</th>
+                    <th>Losses</th>
+                    <th>Points</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="result in sortResult">
+                    <td><b>{{ result.team }}</b></td>
+                    <td><b>{{ result.games_played }}</b></td>
+                    <td><b>{{ result.win }}</b></td>
+                    <td><b>{{ result.tie }}</b></td>
+                    <td><b>{{ result.loss }}</b></td>
+                    <td><b>{{ result.points }}</b></td>
+                </tr>
+            </tbody>
+        </table>
 
         <div id="back-and-home-btn">
-            <a type="button" id="home" href="Home-NYSL-app.html" class="btn">Home</a>
-            <a type="button" id="game-info" href="Locations-NYSL.html" class="btn">Back</a>
+            <a type="button" id="home" href="index.html" class="btn">Home</a>
         </div>
 
     </div>
