--- a/public/tempResult.html
+++ b/public/tempResult.html
@@ -80,7 +80,7 @@
 
 
         <div id="back-and-home-btn">
-            <a type="button" id="home-btn" href="Home-NYSL-app.html" class="btn">Home</a>
+            <a type="button" id="home-btn" href="index.html" class="btn">Home</a>
         </div>
     </div>
 </body>
