--- a/public/Messageboard-NYSL-app.html
+++ b/public/Messageboard-NYSL-app.html
@@ -1,14 +1,125 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="NYSL-app.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <title>NYSL</title>
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 </head>
 
 <body>
 
+    <div id="app">
+
+
+        <div class="background-img">
+            <img src="soccer-field(1).png" alt="soccer field" id="background">
+        </div>
+
+        <div class="background-img-landscape">
+            <img src="soccer-field.png" alt="soccer field" id="background-landscape">
+        </div>
+
+        <!-- login/logout  -->
+        <div class="chat">
+            <div class="advice" v-if="!loginStatus">
+                You must to be logged
+                <button id="login" class="button is-info" @click="login; loginStatus = true">Login!</button>
+            </div>
+            <button @click="login; loginStatus = true" id="login">Login</button>
+            <button @click="logout; loginStatus = false" id="logout">Logout</button>
+            <!-- <div id="posts" class="box" v-if="messages >= 0">
+                Loading posts...
+            </div> -->
+
+            <div id="notLoggedIn">
+                Please login
+            </div>
+
+            <!-- chat  -->
+            <div>
+                <div v-for="post in messages">
+                    {{post.name}} : {{post.body}}
+                </div>
+            </div>
+            <input type="text" v-model="message" @keyup.enter="saveMessage" placeholder="Say something..."><button
+                @click="saveMessage">Send</button>
+
+
+            <!-- back and home btn  -->
+            <div id="back-and-home-btn">
+                <a type="button" id="home" href="index.html" class="btn">Home</a>
+                <a type="button" id="upcoming-game" href="Upcoming-NYSL-app.html" class="btn">Upcoming Games</a>
+            </div>
+        </div>
+
+    </div>
 </body>
+
+<script>
+    // const firebase = require("firebase");
+    // // Required for side-effects
+    // require("firebase/firestore");
+
+    // var db = firebase.firestore();
+
+    // db.settings({
+    //     timestampsInSnapshots: true
+    // })
+
+    // window.db = db;
+</script>
+<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> -->
+
+<!-- CHANGE THIS CODE BY YOURS -->
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script> -->
+
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyCLLfV_7NYpsFXLw_2ioaGm7Y9MOBhBkqs",
+        authDomain: "nysl-app-f9866.firebaseapp.com",
+        databaseURL: "https://nysl-app-f9866.firebaseio.com",
+        projectId: "nysl-app-f9866",
+        storageBucket: "nysl-app-f9866.appspot.com",
+        messagingSenderId: "562959138061",
+        appId: "1:562959138061:web:6e3174bbd03d95e894c444",
+        measurementId: "G-R7NGCDMF6S"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    // firebase.analytics();
+</script>
+
+<!-- vue  -->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="NYSL-app.js"></script>
 
 </html>
