--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <a type="button" class="btn" id="game-info" href="scoreboard-NYSL-app.html">Scoreboard</a>
             <a type="button" class="btn" id="locations" href="Locations-NYSL.html">Game Locations</a>
             <a type="button" class="btn" id="about" href="about-NYSL.html">About NYSL</a>
-            <a type="button" class="btn" id="messageboard" disabled>Messageboard</a>
+            <a type="button" class="btn" id="messageboard" href="Messageboard-NYSL-app.html">Messageboard</a>
             <a type="button" class="btn" id="events" href="events-NYSL-app.html">Events</a>
         </div>
 
