--- a/public/Messageboard-NYSL-app.html
+++ b/public/Messageboard-NYSL-app.html
@@ -16,7 +16,6 @@
 
     <div id="app">
 
-
         <div class="background-img">
             <img src="soccer-field(1).png" alt="soccer field" id="background">
         </div>
@@ -28,59 +27,34 @@
         <!-- login/logout  -->
         <div class="chat">
             <div class="advice" v-if="!loginStatus">
-                You must to be logged in!
-                <button id="login" class="button is-info" @click="login(); loginStatus = true">Login!</button>
+                <h3 class="title">You must to be logged in!</h3>
+                <button id="login" @click="login(); loginStatus = true" class="form-control">Login!</button>
             </div>
-            <button @click="logout(); loginStatus = false" id="logout" v-if="loginStatus">Logout</button>
+            <button @click="logout(); loginStatus = false" id="logout" v-if="loginStatus"
+                class="form-control">Logout</button>
 
-
-            <!-- chat  -->
-            <div class="scroll" id="scroll">
-                <div v-for="post in messages" v-if="loginStatus" id="chat" v-chat-scroll>
-                    {{post.name}} : {{post.body}}
+            <div class="card border-success mb-3 scroll" id="scroll">
+                <div v-for="post in messages"
+                    v-bind:class="{'yourMessage': true, 'myMessage': (post.email === firebase.auth().currentUser.email)}"
+                    v-if="loginStatus" id="chat">
+                    <p class="card-text">{{post.body}}</p>
+                    <div class="card-footer bg-transparent border-success">{{post.name}}</div>
                 </div>
             </div>
+
+
         </div>
-        <input type=" text" v-if="loginStatus" v-model="message" @keyup.enter="saveMessage"
-            placeholder="Say something..."><button @click="saveMessage" v-if="loginStatus"
-            class="button is-primary">Send</button>
-
-
+        <input type="text" class="form-control" v-if="loginStatus" v-model="message" @keyup.enter="saveMessage"
+            placeholder="Say something...">
+        <button @click="saveMessage" v-if="loginStatus" class="form-control">Send</button>
 
         <!-- back and home btn  -->
         <div id="back-and-home-btn">
             <a type="button" id="home" href="index.html" class="btn">Home</a>
             <a type="button" id="upcoming-game" href="Upcoming-NYSL-app.html" class="btn">Upcoming Games</a>
         </div>
-
-
     </div>
 </body>
-
-<script>
-    // const firebase = require("firebase");
-    // // Required for side-effects
-    // require("firebase/firestore");
-
-    // var db = firebase.firestore();
-
-    // db.settings({
-    //     timestampsInSnapshots: true
-    // })
-
-    // window.db = db;
-</script>
-<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> -->
 
 <!-- CHANGE THIS CODE BY YOURS -->
 
@@ -92,7 +66,6 @@
 <!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script> -->
 <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
-<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script> -->
 
 <script>
     // Your web app's Firebase configuration
