finishing touches with css

--- a/public/Game-info-NYSL.html
+++ b/public/Game-info-NYSL.html
@@ -26,19 +26,19 @@
 
         <h1 class="title">Saturday Game</h1>
 
-        <h5 class="date">{{ schedule[n].date }}</h5>
+        <h5 class="date">{{ scheduleAM[n].date }}</h5>
         <h4 class="time">9:30AM</h4>
         <div class="field">
-            <h5>Location: {{ schedule[n].field }}</h5>
+            <h5>Location: {{ scheduleAM[n].field }}</h5>
         </div>
 
         <div id="AM-game">
             <div class="home-team">
-                <h1>{{ schedule[n].home_team }}</h1>
+                <h1>{{ scheduleAM[n].home_team }}</h1>
             </div>
             <h3 class="vs">VS.</h3>
             <div class="away-team">
-                <h1>{{ schedule[n].away_team }}</h1>
+                <h1>{{ scheduleAM[n].away_team }}</h1>
             </div>
         </div>
 
