--- a/public/Upcoming-NYSL-app.html
+++ b/public/Upcoming-NYSL-app.html
@@ -26,24 +26,26 @@
 
         <h1 class="title">Game Schedule</h1>
 
-        <table id="table" class="table">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Teams</th>
-                    <th>Location</th>
-                    <th>Time</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="schedule in schedule">
-                    <td><b>{{ schedule.date }}</b></td>
-                    <td><b>{{ schedule.home_team }} vs {{ schedule.away_team }}</b></td>
-                    <td><b>{{ schedule.field }}</b></td>
-                    <td><b>{{ schedule.time }}</b></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table">
+            <table id="table" class="table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Teams</th>
+                        <th>Location</th>
+                        <th>Time</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="schedule in schedule">
+                        <td><b>{{ schedule.date }}</b></td>
+                        <td><b>{{ schedule.home_team }} vs {{ schedule.away_team }}</b></td>
+                        <td><b><a v-bind:href="schedule.location" class="link">{{ schedule.field }}</a></b></td>
+                        <td><b>{{ schedule.time }}</b></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <div id="back-and-home-btn">
             <a type="button" id="home" href="index.html" class="btn">Home</a>
