--- a/public/about-NYSL.html
+++ b/public/about-NYSL.html
@@ -35,13 +35,18 @@
             <h3>Vision</h3>
             <p>The Northside Youth Soccer League aspires to develop strong, well-rounded, and mindful athletes through
                 the building of character, self-discipline, and leadership.</p>
+            <span id="dots">...</span><span id="more">
 
-            <h3>General Information</h3>
-            <p>The Northside Youth Soccer League was established in 1996 to provide athletes residing in Chicago's
-                northside neighborhoods an environment in which to learn and play soccer. To be a member of NYSL, you
-                must be between the ages of 4 - 12 and reside in a Chicago northside neighborhood. NYSL is run by a
-                small full-time staff, and relies on the generous volunteer time of parents and previous league members.
-            </p>
+                <h3>General Information</h3>
+                <p>The Northside Youth Soccer League was established in 1996 to provide athletes residing in Chicago's
+                    northside neighborhoods an environment in which to learn and play soccer. To be a member of NYSL,
+                    you
+                    must be between the ages of 4 - 12 and reside in a Chicago northside neighborhood. NYSL is run by a
+                    small full-time staff, and relies on the generous volunteer time of parents and previous league
+                    members.
+                </p>
+            </span>
+            <button @click="collapse()" id="myBtn" class="form-control">Read more</button>
         </div>
 
         <div id="back-and-home-btn">
