--- a/public/Game-info-NYSL.html
+++ b/public/Game-info-NYSL.html
@@ -56,15 +56,20 @@
             </div>
         </div>
 
+        <div class="nextgame">
+            <button @click="n--, j--" :disabled="n == 0">Previous Game</button>
+            <button @click="n++, j++" :disabled="n == 8">Next Game</button>
+        </div>
+
         <div id="back-and-home-btn">
             <a type="button" id="home" href="index.html" class="btn">Home</a>
             <a type="button" id="upcoming-game" href="Upcoming-NYSL-app.html" class="btn">Upcoming Games</a>
         </div>
 
-        <div class="game-over">
+        <!-- <div class="game-over">
             <a href="result-NYSL-app.html" @click="n++, j++" :disabled="n >= gameDayAM.length - 1" id="game-over">Game
                 Finished</a>
-        </div>
+        </div> -->
     </div>
 </body>
 
@@ -80,6 +85,33 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
+<!-- CHANGE THIS CODE BY YOURS -->
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyCLLfV_7NYpsFXLw_2ioaGm7Y9MOBhBkqs",
+        authDomain: "nysl-app-f9866.firebaseapp.com",
+        databaseURL: "https://nysl-app-f9866.firebaseio.com",
+        projectId: "nysl-app-f9866",
+        storageBucket: "nysl-app-f9866.appspot.com",
+        messagingSenderId: "562959138061",
+        appId: "1:562959138061:web:6e3174bbd03d95e894c444",
+        measurementId: "G-R7NGCDMF6S"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    // firebase.analytics();
+</script>
 
 <!-- vue  -->
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
