--- a/public/tempResult.html
+++ b/public/tempResult.html
@@ -26,60 +26,62 @@
 
         <h1 class="title">Temp result</h1>
 
+        <!-- <h4 v-for="(val, name, index) in score">{{ score["season-one"][0].win }}</h4> -->
 
         <div class="result-container">
             <div class="result">
                 <h1>U1</h1>
-                <button type="button" @click="result[0].points++" class="btn btn-success">+</button>
-                <span class="team-score">{{ result[0].points }}</span>
-                <button type="button" @click="result[0].points--" :disable="result[0].points == 0"
+                <button type="button" @click='score["season-one"][0].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score["season-one"][0].points }}</span>
+                <button type="button" @click='score["season-one"][0].points--' :disable="result[0].points == 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U2</h1>
-                <button type="button" @click="result[1].points++" class="btn btn-success">+</button>
-                <span class="team-score">{{ result[1].points }}</span>
-                <button type="button" @click="result[1].points--" :disable="result[1].points >= 0"
+                <button type="button" @click='score["season-one"][1].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score["season-one"][1].points }}</span>
+                <button type="button" @click='score["season-one"][1].points--' :disable="result[1].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U3</h1>
-                <button type="button" @click="result[2].points++" class="btn btn-success">+</button>
-                <span class="team-score">{{ result[2].points }}</span>
-                <button type="button" @click="result[2].points--" :disable="result[2].points >= 0"
+                <button type="button" @click='score["season-one"][2].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score["season-one"][2].points }}</span>
+                <button type="button" @click='score["season-one"][2].points--' :disable="result[2].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U4</h1>
-                <button type="button" @click="result[3].points++" class="btn btn-success">+</button>
-                <span class="team-score">{{ result[3].points }}</span>
-                <button type="button" @click="result[3].points--" :disable="result[3].points >= 0"
+                <button type="button" @click='score["season-one"][3].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score["season-one"][3].points }}</span>
+                <button type="button" @click='score["season-one"][3].points--' :disable="result[3].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U5</h1>
-                <button type="button" @click="result[4].points++" class="btn btn-success">+</button>
-                <span class="team-score">{{ result[4].points }}</span>
-                <button type="button" @click="result[4].points--" :disable="result[4].points >= 0"
+                <button type="button" @click='score["season-one"][4].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score["season-one"][4].points }}</span>
+                <button type="button" @click='score["season-one"][4].points--' :disable="result[4].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U6</h1>
-                <button type="button" @click="result[5].points++" class="btn btn-success">+</button>
-                <span class="team-score">{{ result[5].points }}</span>
-                <button type="button" @click="result[5].points--" :disable="result[5].points >= 0"
+                <button type="button" @click='score["season-one"][5].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score["season-one"][5].points }}</span>
+                <button type="button" @click='score["season-one"][5].points--' :disable="result[5].points >= 0"
                     class="btn btn-danger">-</button>
+            </div>
+            <div>
             </div>
         </div>
 
-
-
         <div id="back-and-home-btn">
+            <button type="button" @click="saveScores()" class="save">Save Result</button>
             <a type="button" id="home-btn" href="index.html" class="btn">Home</a>
         </div>
     </div>
@@ -97,6 +99,33 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
+<!-- CHANGE THIS CODE BY YOURS -->
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyCLLfV_7NYpsFXLw_2ioaGm7Y9MOBhBkqs",
+        authDomain: "nysl-app-f9866.firebaseapp.com",
+        databaseURL: "https://nysl-app-f9866.firebaseio.com",
+        projectId: "nysl-app-f9866",
+        storageBucket: "nysl-app-f9866.appspot.com",
+        messagingSenderId: "562959138061",
+        appId: "1:562959138061:web:6e3174bbd03d95e894c444",
+        measurementId: "G-R7NGCDMF6S"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    // firebase.analytics();
+</script>
 
 <!-- vue  -->
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
