--- a/public/tempResult.html
+++ b/public/tempResult.html
@@ -31,49 +31,49 @@
         <div class="result-container">
             <div class="result">
                 <h1>U1</h1>
-                <button type="button" @click='score["season-one"][0].points++' class="btn btn-success">+</button>
-                <span class="team-score">{{ score["season-one"][0].points }}</span>
-                <button type="button" @click='score["season-one"][0].points--' :disable="result[0].points == 0"
+                <button type="button" @click='score[0].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score[0].points }}</span>
+                <button type="button" @click='score[0].points--' :disable="result[0].points == 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U2</h1>
-                <button type="button" @click='score["season-one"][1].points++' class="btn btn-success">+</button>
-                <span class="team-score">{{ score["season-one"][1].points }}</span>
-                <button type="button" @click='score["season-one"][1].points--' :disable="result[1].points >= 0"
+                <button type="button" @click='score[1].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score[1].points }}</span>
+                <button type="button" @click='score[1].points--' :disable="result[1].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U3</h1>
-                <button type="button" @click='score["season-one"][2].points++' class="btn btn-success">+</button>
-                <span class="team-score">{{ score["season-one"][2].points }}</span>
-                <button type="button" @click='score["season-one"][2].points--' :disable="result[2].points >= 0"
+                <button type="button" @click='score[2].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score[2].points }}</span>
+                <button type="button" @click='score[2].points--' :disable="result[2].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U4</h1>
-                <button type="button" @click='score["season-one"][3].points++' class="btn btn-success">+</button>
-                <span class="team-score">{{ score["season-one"][3].points }}</span>
-                <button type="button" @click='score["season-one"][3].points--' :disable="result[3].points >= 0"
+                <button type="button" @click='score[3].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score[3].points }}</span>
+                <button type="button" @click='score[3].points--' :disable="result[3].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U5</h1>
-                <button type="button" @click='score["season-one"][4].points++' class="btn btn-success">+</button>
-                <span class="team-score">{{ score["season-one"][4].points }}</span>
-                <button type="button" @click='score["season-one"][4].points--' :disable="result[4].points >= 0"
+                <button type="button" @click='score[4].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score[4].points }}</span>
+                <button type="button" @click='score[4].points--' :disable="result[4].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
 
             <div class="result">
                 <h1>U6</h1>
-                <button type="button" @click='score["season-one"][5].points++' class="btn btn-success">+</button>
-                <span class="team-score">{{ score["season-one"][5].points }}</span>
-                <button type="button" @click='score["season-one"][5].points--' :disable="result[5].points >= 0"
+                <button type="button" @click='score[5].points++' class="btn btn-success">+</button>
+                <span class="team-score">{{ score[5].points }}</span>
+                <button type="button" @click='score[5].points--' :disable="result[5].points >= 0"
                     class="btn btn-danger">-</button>
             </div>
             <div>
